# riscfetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md  test_on_riscv.sh
.claude/: CLAUDE.md  DECISIONS.md  DESIGN.md  TODO.md
.github/workflows/: ci.yml  release.yml
crates/riscfetch-cli/: Cargo.toml  SPEC.md  build.rs
crates/riscfetch-cli/src/: benchmark.rs  cli.rs  display.rs  logos.rs  main.rs  vendors.rs
crates/riscfetch-cli/tests/: integration_test.rs
crates/riscfetch-core/: Cargo.toml  README.md  SPEC.md
crates/riscfetch-core/src/: extensions.rs  hardware.rs  lib.rs  parsing.rs  system.rs  types.rs
src/: benchmark.rs  info.rs  main.rs
tests/: integration_test.rs
