[package]
name = "riscfetch"
version = "0.1.0"
edition = "2021"
authors = ["riscfetch contributors"]
description = "RISC-V architecture information display tool - Show off your RISC-V setup!"
license = "MIT"
repository = "https://github.com/kako-jun/riscfetch"
keywords = ["risc-v", "cli", "system-info", "fetch"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
sysinfo = "0.31"

[[bin]]
name = "riscfetch"
path = "src/main.rs"
