[package]
name = "riscfetch"
version = "0.2.0"
edition = "2021"
authors = ["kako-jun"]
description = "RISC-V architecture information display tool - Show off your RISC-V setup!"
license = "MIT"
repository = "https://github.com/kako-jun/riscfetch"
keywords = ["risc-v", "cli", "system-info", "fetch"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[dependencies]
riscfetch-core = { path = "../riscfetch-core", version = "0.2.0" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde_json = "1.0"
figlet-rs = "0.1"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[[bin]]
name = "riscfetch"
path = "src/main.rs"
